--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,20 +1,3 @@
-@media (max-width: 549px) {
-
-}
-
-@media (min-width: 550px) and (max-width: 1199px) {
-
-}
-
-@media (min-width: 1200px) and (max-width: 1799px) {
-  .headerBody {
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-  }
-}
-
-@media (min-width: 1800px) {
- 
+.me-auto{
+  background: #202224 !important;
 }
