--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -1,5 +1,6 @@
 @media (max-width: 549px) {
   .homeBody {
+    height: 90vh;
     width: 100vw;
 
     background: radial-gradient(
